<resources>
    <string name="app_name">Java Naja</string>
    <string name="facebook_app_id">230233111178824</string>
    <string name="fb_login_protocol_scheme">fb230233111178824</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings"></string>
    <string name="title_activity_chap1">บทที่ 1 ภาษาคอมพิวเตอร์และการพัฒนาโปรแกรม</string>
    <string name="title_activity_chap2">บทที่ 2 พื้นฐานภาษาจาวา</string>
    <string name="title_activity_chap3">บทที่ 3 อาร์เรย์</string>
    <string name="title_activity_chap4">บทที่ 4 เมธอด (Methods) </string>
    <string name="title_activity_chap5">บทที่ 5 ข้อมูลอาร์เรย์และสตริง</string>
    <string name="title_activity_chap6">บทที่ 6 คลาสและการเขียนโปรแกรมเชิงวัตถุเบื้องต้น</string>
    <string name="title_activity_chap7">บทที่ 7 วิธีการเชิงวัตถุและการออกแบบคลาส</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="score">0</string>
    <string name="Chapter1">บทที่ 1</string>
    <string name="Chapter2">บทที่ 2</string>
    <string name="Chapter3">บทที่ 3</string>
    <string name="Chapter4">บทที่ 4</string>
    <string name="Chapter5">บทที่ 5</string>
    <string name="Chapter6">บทที่ 6</string>
    <string name="Chapter7">บทที่ 7</string>
    <string name="before_test">แบบทดสอบก่อนเรียน</string>
    <string name="after_test">แบบทดสอบหลังเรียน</string>
    <string name="point1">หน่วยที่ 1</string>
    <string name="point2">หน่วยที่ 2</string>
    <string name="point3">หน่วยที่ 3</string>
    <string name="point4">หน่วยที่ 4</string>
    <string name="point5">หน่วยที่ 5</string>
    <string name="point6">หน่วยที่ 6</string>
    <string name="point7">หน่วยที่ 7</string>
    <string name="Content1_1Leader">บทที่ 1\nภาษาคอมพิวเตอร์และการพัฒนาโปรแกรม</string>
    <string name="Content1_1Header">1.1 โปรแกรมภาษา</string>
    <string name="Content1_1Body_1">\t\t โปรแกรมคอมพิวเตอร์ไม่ว่าจะเขียนด้วยภาษาระดับต่ำหรือภาษาระดับสูงจะต้องแปลงภาษาให้เป็นรหัสภาษาเครื่องคอมพิวเตอร์ก่อนภาษาคอมพิวเตอร์เป็นการนำชุดคำสั่งแต่ละคำสั่งมาต่อกันให้ทำงาน\n\t\t
        ภาษาคอมพิวเตอร์ที่ใช้รหัสนีโมนิกหรือรหัสเลขฐานสองในการเขียนโปรแกรม เรียกว่า ภาษาแอสเซมบลี (Assembly Language)\n\t\t
        การเขียนโปรแกรมด้วยภาษาแอสเซมบลีจะต้องใช้ตัวแปลให้เป็นภาษาเครื่องตัวแปลนี้เรียกว่า แอสเซมเบลอร์ (Assembler)</string>
    <string name="Content1_1Body_2">\t\t การเขียนโปรแกรมด้วยภาษาระดับสูงจะมีตัวแปลสองประเภท คือ อินเทอร์พรีเตอร์
        (Interpreter) การทำงานของตัวอินเทอร์พรีเตอร์จะแปลความหมายของทีละคำสั่ง
        และอีกคำสั่งคือ คอมไพเลอร์ (Compiler) การทำงานจะแปลโปรแกรมต้นฉบับทั้งหมด
        และโปรแกรมจะทำงานได้เร็วขึ้นเพราะไม่ต้องแปลคำสั่งถัดไปอีก</string>
    <string name="Content1_2Header">1.2 ภาษาจาวา</string>
    <string name="Content1_2Body_1">\t\t ภาษาจาวา (JAVA)
        พัฒนาโดยบริษัท Sun microsystem
        โดยพัฒนาให้เป็นภาษาใช้ในการเขียนโปรแกรมเชิงวัตถุ
        (Object-Oriented Programming)
        สามารถทำงานบนเครื่องที่ต่างกันได้โดยไม่ต้องคอมไพใหม่ เรียกว่า
        Platform independent</string>
    <string name="Content1_2Body_2">
        Write Once, run anywhere\n(เขียนครั้งเดียวรันได้ทุกแพลตฟอร์ม)</string>
    <string name="Content1_3Header">1.3 ชุดพัฒนาภาษาจาวา</string>
    <string name="Content1_3Body_1">\t\t สำหรับชุดพัฒนาโปรเกรมภาษาจาวา มี 3 รุ่น คือ
		\n\t\t J2SE หรือ Java 2 Standard Edition
		\n\t\t J2EE หรือ Java 2 Enterprise Edition
		\n\t\t J2ME หรือ Java 2 Micro Edition </string>
    <string name="Content1_3Body_2">\t\t ขั้นตอนในการพัฒนาโปรแกรม \n\t\t\t\t
    1. เขียนโปรแกรมต้นฉบับด้วยเอดิเตอร์ ให้มีนามสกุล .java เช่น Hello.java \n\t\t\t\t
    2. คอมไพล์โปรแกรมโดยใช้โปรแกรมชื่อ java.exe \n\t\t\t\t
    3. จะได้ผลลัพธ์ออกมาเป็นไบต์โค้ด มีนามสกุลเป็น .class \n\t\t\t\t
    4. รันโปรแกรมโดยใช้ตัวอินเทอร์พรีเตอร์ชื่อ java.exe โปรแกรมจะทำงานตามที่เขียนไว้</string>
    <string name="Content2_1Leader"> บทที่ 2 \n พื้นฐานภาษาจาวา </string>
    <string name="Content2_1Header"> 2.1 โครงสร้างภาษาจาวา </string>
    <string name="Content2_1Body_1"> \t\t ภาษาจาวาจะมีแนวคิดการเขียนโปรแกรมแบบเชิงวัตถุโปรแกรมจะเริ่มขึ้นโดยการสร้างคลาสขึ้นมาก่อน จากนั้นเขียนคำสั่งต่างๆ ลงไป </string>
    <string name="Content2_1Body_2"> \t\t หากกต้องการสร้างโปรแกรมต้นฉบับ หรือ source code จะต้องเขียนให้อยู่ในโครงสร้างพื้นฐานของภาษาจาวา ดังนี้ \n </string>
    <string name="Content2_1Body_3"> \n\t\t 1. Class Simple มีการใช้คำสั่ง System.out.println ทางจอภาพ \n
\t\t 2. คำสั่งจะปิดด้วยเครื่องหมายเซมิโคลอน ( ; ) \n
\t\t 3. คลาสจะเริ่มต้นด้วยคำว่า public ตามด้วยคำสั่งว่า class และชื่อคลาส \n
\t\t 4. Public จะต้องเขียนไว้หน้าคลาสเสมอ \n </string>
    <string name="Content2_1Body_4"> \n\t คือ เมธอด (Method) ของคลาส \n
\t\t - main หมายถึง เมธอดหลัก ซึ่งจะทำงานทุกครั้งที่ class ถูกเรียกใช้งาน \n
\t\t - public จะถูกเขียนนำหน้าการประกาศเมธอก main เสมอ \n
\t\t - static หมายถึง การประกาศว่าเมธอดสามารถทำงานได้โดยไม่ต้องสร้างออบเจ็กต์ (Object) \n
\t\t - void หมายถึง เมธอดจะไม่มีการคืนค่ากลับหลังจบการทำงาน \n
\t\t - วงเล็บ () ด้านหลังชื่อ Method หมายถึง อาร์กิวเมนต์หรือตัวแปร เพื่อใช้ในการส่งข้อมูลเข้าสู่เมธอด \n  </string>
    <string name="content2_1pic1"> \t public class Simple{ \n
\t\t public static void main (String[ ] args){ \n
\t\t\t System.out.println(“Programming is great fun!”); \n
\t\t\t } \n
\t\t }  </string>
    <string name="content2_1pic2"> \t public static void main(String[ ] args) </string>
    <string name="Content2_2Header"> 2.2 เมธอดแสดงผลทางจอภาพพื้นฐาน </string>
    <string name="Content2_2Body_1"> \t\t การแสดงผลทางจอภาพในภาษาจาวา จะใช้เมธอด print และ println ในการแสดงผลทางจอภาพโดยเมธอดทั้งสองนี้จะถูกบรรจุในออบเจ็กต์ชื่อ
out ออบเจ็กต์นี้จะถูกเก็บในชื่อคลาส System การใช้เมธอดที่อยู่ในออบเจ็กต์ต่างๆ จะใช้เครื่องหมาย (.) ในการอ้างอิง </string>
    <string name="Content2_2Body_2"> \t\t มีรูปแบบการใช้งาน ดังนี้ โดย (data) คือข้อมูลที่จะแสดงออกทางหน้าจอ </string>
    <string name="Content2_2Body_3"> \t\t - การใช้เมธอด print หลังจากแสดงผลข้อมูล จะไม่ขึ้นบรรทัดใหม่ \n
\t\t - การใช้เมธอด println จะทำให้โปรแกรมขึ้นบรรทัดใหม่หลังจากพิมพ์ข้อมูลที่แสดงผลแล้ว </string>
    <string name="Content2_2Body_4"> \t\t ตัวอย่างที่ 2.1 การใช้เมธอด print และ println หลังจาการทำเมธอด print การแสดงผลเมธอดจะยังอยู่ในบรรทัดเดิม ส่วน println
จะทำให้การแสดงผงในเมธอดแสดงผลขึ้นบรรทัดใหม่ ดังนั้น โปรแกรมนี้จะแสดงผลทางเอาต์พุตจำนวนสองบรรทัด </string>
    <string name="Content2_2Body_5"> \n\t\t ตัวอย่างที่ 2.1 TcCom.java </string>
    <string name="Content2_2Body_6"> \n\t\t ผลลัพธ์ </string>
    <string name="Content2_2Body_7"> \n\t\t การแสดงผลด้วยเมธอด print หรือ println สามารถใช้ escape sequence สำหรับควบคุมการแสดงผลได้ จะเริ่มต้นด้วยเครื่องหมาย แบ็กสแลช (\) แล้วตามด้วยตัวอักขระควบคุมหนึ่งตัว ดังตาราง </string>
    <string name="Content2_2Body_8"> \n ตารางที่ 2.1 ตารางแสดง escape sequence ในภาษาจาวา</string>
    <string name="Content2_2Body_9"> \n ตัวอย่างที่ 2.2 Tabs.java จะเป็นการใช้อักขระควบคุมการแสดงผลร่วมกับเมธอด print </string>
    <string name="Content2_2Body_10"> \n\t\t ผลลัพธ์ </string>
    <string name="content2_2pic1"> \t public class TcCom{ \n
\t\t public static void main(String[ ] args){ \n
\t\t\t System.out.print(“We are ”); \n
\t\t\t System.out.println(“Technology Computer”); \n
\t\t\t System.out.print(“We are ”); \n
\t\t\t System.out.print(“Computer Software”); \n
\t\t\t } \n
\t\t }  </string>
    <string name="content2_2pic2"> Program is TcCom \n
These are our top sellers: Computer Software \n \n
Process completed </string>
    <string name="content2_2pic3"> \t Public class Tabs{ \n
\t\t Public static void main(String[ ] args) { \n
\t\t\t System.out.print(“These are our top sellers: ＼n”); \n
\t\t\t System.out.print(“ ＼t Computer games\n ＼tCoffee  ＼n”); \n
\t\t\t System.out.println(“ ＼t Aspirin”); \n
\t\t\t } \n
\t\t }  </string>
    <string name="content2_2pic4"> \t These are our top sellers : \n
\t\t Computer games \n
\t\t Coffee \n
\t\t Aspirin \n
\t Process comleted. </string>
    <string name="Content2_3Header"> 2.3 ชนิดของข้อมูล ตัวแปรและค่าคงที่ </string>
    <string name="Content2_3Body_1"> \t\t ตัวแปร คือ ชื่อที่กำหนดขึ้นสำหรับเก็บข้อมูล หากระบบต้องการเก็บข้อมูลที่รับเข้าจากอินพุตต่างๆ จะต้องจองพื้นที่หน่วยความจำคอมพิวเตอร์สำหรับเก็บข้อมูล </string>
    <string name="Content2_3Body_2"> \t\t การกำหนดค่าตัวแปรแต่ละตัวต้องกำหนดด้วยว่าจะให้ตัวแปรนั้นเก็บข้อมูลชนิดใด รูปแบบการประกาศตัวแปรในภาษาจาวา ดังนี้ </string>
    <string name="Content2_3Body_3"> \n รูปแบบ </string>
    <string name="Content2_3Body_4"> \n\t ถ้าหากมีตัวแปรหลายตัวจะใช้เครื่องหมาย , คั่น ดังตัวอย่าง \n
\t int x; \t\t //ประกาศตัวแปร x สำหรับเก็บเลขจำนวนเต็ม \n
\t int x,y; \t\t //ประกาศตัวแปร x และ y สำหรับเก็บเลขจำนวนเต็ม \n </string>
    <string name="Content2_3Body_5"> \t\t เมื่อประกาศตัวแปรขึ้นมาแล้วสามารถใช้เครื่องหมาย = ในการกำหนดค่าได้อีก รูปแบบดังนี้ \n </string>
    <string name="Content2_3Body_6"> รูปแบบ </string>
    <string name="Content2_3Body_7"> \t\t ข้อมูลที่กำหนดกับชนิดตัวแปรจะต้องเป็นข้อมูลประเภทเดียวกัน ชนิดข้อมูลในภาษาวา ดังนี้ \n
\t\t 1. ข้อมูลแบบพื้นฐาน (primitive data type) \n
\t\t 2. ข้อมูลแบบอ้างอิง (reference data type) \n </string>
    <string name="Content2_3Body_8"> \t\t ข้อมูลทั้งสองประเภทนี้จะต่างกันตรงที่การอ้างถึงตำแหน่งหน่วยความจำที่ใช้เก็บข้อมูลจริง สำหรับข้อมูลแบบพื้นฐานในภาษาจาวาแบ่งออกเป็น 4 กลุ่ม ดังนี้ </string>
    <string name="Content2_3Body_9"> \t\t 1. ข้อมูลชนิดตรรกะ (Logical) \n
\t\t 2. ข้อมูลชนิดอักขระ (Textual) \n
\t\t 3. ข้อมูลชนิดจำนวนเต็ม (Integer) \n
\t\t 4. ข้อมูลชนิดเลขทศนิยม (Floating point) \n </string>
    <string name="Content2_3Body_10"> ข้อมูลแบบตรรกะ (Logical) </string>
    <string name="Content2_3Body_11"> \t\t ข้อมูลประเภทนี้จะมีค่าแบบ Boolean โดยมีค่าเพียงสองค่า คือ true (จริง)กับ false (เท็จ) ดังตัวอย่าง \n </string>
    <string name="Content2_3Body_12"> \n\t\t - เป็นการประกาศตัวแปรชื่อ check ให้เป็นข้อมูลแบบบูลีนและกำหนดให้เป็นจริง \n
\t\t - ส่วน no_check ถูกกำหนดให้เป็นตัวแปรแบบบูลีนและกำหนดให้เป็นเท็จ \n </string>
    <string name="Content2_3Body_13"> ข้อมูลแบบตัวอักขระ (Textual)</string>
    <string name="Content2_3Body_14"> \t\t ตัวอักขระเป็นข้อมูลที่มีความยาวไม่เกิน 1 ตัวอักษร การเก็บข้อมูลประเภทนี้จะใช้คำว่า char ในภาษาจาวา การเก็บข้อมูลอักขระลงหน่วยความจำ จะใช้รหัสแบบ Unicode เป็นรหัสที่มีขนาด 16 บิต
การกำหนดข้อมูลที่เป็นตัวอักขระจะต้องเขียนอยู่ใน ‘ ’ (single quote) หรือ กำหนดค่ารหัส Unicode โดยตรงก็ได้ ใช้สัญลักษณ์ ⧵u นำหน้าแล้วตามด้วยเลขฐานสิบหกของรหัสนั้น ดังตัวอย่าง \n </string>
    <string name="Content2_3Body_15">\t\t ตัวอย่าง </string>
    <string name="Content2_3Body_16"> \n ข้อมูลจำนวนจริง (Integer) </string>
    <string name="Content2_3Body_17"> \t\t ข้อมูลแบบจำนวนเต็มมี 4 ประเภท คือ byte, short, int และ long แต่ละประเภทจะต่างกันตรงที่ขาดของหน่วยความจำ ทำให้แต่ละประเภทเก็บข้อมูลได้ในช่วงที่ต่างกัน \n
\t\t การประกาศตัวแปรสำหรับเก็บข้อมูลจำนวนเต็มจะต้องเลือกชนิดข้อมูลที่เหมาะสมตัวแปร เพื่อไม่ให้ใช้พื้นที่หน่วยความจำเกินความจำเป็น สำหรับขนาดและช่วงที่เก็บข้อมูล ดังตาราง 2.2 \n </string>
    <string name="Content2_3Body_18"> ตัวอย่าง </string>
    <string name="Content2_3Body_19"> \n\t\t จากตัวอย่างด้านบน เมื่อประกาศตัวแปรเลขจำนวนเต็ม สามารถกำหนดค่าให้กับตัวแปรได้ แต่ถ้าตัวแปรนั้นเป็นชนิด long จะต้องใส่ l หรือ L ตามหลัง และยังสามารถกำหนดเป็นเลขฐานสิบหกได้
โดยใช้ 0x (ศูนย์เอ็กซ์) นำหน้าตัวเลขขั้น \n </string>
    <string name="Content2_3Body_20"> ข้อมูลชนิดเลขทศนิยม (Floating-Point) </string>
</resources>