<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AchievementActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="15dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginRight="-5dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/but_chap1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:text="@string/Chapter1"
                android:textAlignment="center"
                android:textColor="@color/colorDarkness"
                android:background="@drawable/backwithborder2"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/but_chap2"
                android:text="@string/Chapter2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:textAlignment="center"
                android:textColor="@color/colorDarkness"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/but_chap3"
                android:text="@string/Chapter3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:textAlignment="center"
                android:textColor="@color/colorDarkness"
                android:background="@drawable/backwithborder2"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/but_chap4"
                android:text="@string/Chapter4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:textAlignment="center"
                android:textColor="@color/colorDarkness"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/but_chap5"
                android:text="@string/Chapter5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:textAlignment="center"
                android:textColor="@color/colorDarkness"
                android:background="@drawable/backwithborder2"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/but_chap6"
                android:text="@string/Chapter6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:textAlignment="center"
                android:textColor="@color/colorDarkness"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/but_chap7"
                android:text="@string/Chapter7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:textAlignment="center"
                android:textColor="@color/colorDarkness"
                android:background="@drawable/backwithborder2"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>