<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="scroll|enterAlways"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="15">

            <TextView
                android:layout_weight="7.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical"
                android:weightSum="7">

                <TextView
                    android:id="@+id/Leader"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="0.5"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/Content1_1Leader"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:textColor="#000000"
                    android:text="@string/Content1_1Header" />

                <TextView
                    android:id="@+id/Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Content1_1Body_1"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/Pic1"
                    android:layout_gravity="center"
                    android:src="@drawable/picchapter1_1"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    />

                <TextView
                    android:id="@+id/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:lineSpacingExtra="5sp"
                    android:textColor="#000000"
                    android:text="@string/Content1_1Body_2" />

                <ImageView
                    android:id="@+id/Pic2"
                    android:layout_gravity="center"
                    android:src="@drawable/picchapter1_2"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:paddingTop="10dp"
                    />

            </LinearLayout>
            <TextView
                android:layout_weight="7.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>